syntax = "proto3";

option java_multiple_files = true;

package payment;

message TransactionRequest {
  int32 amount = 1;
  string orderUUID = 2;
  string paymentType = 3;
}

message TransactionResponse {
  string paymentUrl = 1;
}

message SaveNewPaymentRequest {
  string externalRequest = 1;
  int32 amount = 2;
  int32 orderId = 3;
  string orderUUID = 4;
  string payOnlineType = 5;
  int32 hairStyleId = 6;
  int32 userId = 7;
}

message SaveNewPaymentResponse {
  string bankCode = 1;
  string bankTranNo = 2;
}

message Payment {
  int32 id = 1;
  int32 orderId = 2;
  string type = 3;
  string bankCode = 4;
  string payTime = 5;
  string bankTranNo = 6;
  int32 amount = 7;
}

message GetListPaymentByOrderIdsRequest {
  repeated int32 orderIds = 1;
}

message GetListPaymentByOrderIdsResponse {
  repeated Payment payments = 1;
}

service PaymentService {
  rpc transaction(TransactionRequest) returns (TransactionResponse) {}
  rpc saveNewPayment(SaveNewPaymentRequest) returns (SaveNewPaymentResponse) {}
  rpc getListPaymentByOrderIds(GetListPaymentByOrderIdsRequest) returns (GetListPaymentByOrderIdsResponse) {}
}
